Set address to be required in Request New External webform

--- a/config/optional/webform.webform.request_new_external.yml
+++ b/config/optional/webform.webform.request_new_external.yml
@@ -80,8 +80,12 @@ elements: |
     location:
       '#type': webform_address
       '#title': Location
+      '#required': true
+      '#address__required': true
       '#address_2__access': false
+      '#city__required': true
       '#state_province__access': false
+      '#country__required': true
       '#country__options': country_codes
     start_date:
       '#type': date
