Refactor of forloebsdesigner and fix new role

--- a/config/install/switch_page_theme.settings.yml
+++ b/config/install/switch_page_theme.settings.yml
@@ -8,7 +8,7 @@ spt_table:
       authenticated: authenticated
       administrator: administrator
       flow_designer: flow_designer
-      forloeb_designer: forloeb_designer
+      selvbetjeningsdesigner: selvbetjeningsdesigner
       sagsbehandler: sagsbehandler
       medarbejder: medarbejder
       leder: leder
@@ -26,7 +26,7 @@ spt_table:
       authenticated: authenticated
       administrator: administrator
       flow_designer: flow_designer
-      forloeb_designer: forloeb_designer
+      selvbetjeningsdesigner: selvbetjeningsdesigner
       sagsbehandler: sagsbehandler
       medarbejder: medarbejder
       leder: leder
