--- a/config/optional/views.view.forlob_og_webformularer_til_sagsbehandling.yml
+++ b/config/optional/views.view.forlob_og_webformularer_til_sagsbehandling.yml
@@ -6,7 +6,7 @@ dependencies:
   - system.menu.admin
   - user.role.administrator
   - user.role.flow_designer
-  - user.role.forloeb_designer
+  - user.role.selvbetjeningsdesigner
   - user.role.leder
   - user.role.sagsbehandler
   module:
@@ -35,7 +35,7 @@ display:
           role:
             administrator: administrator
             flow_designer: flow_designer
-            forloeb_designer: forloeb_designer
+            selvbetjeningsdesigner: selvbetjeningsdesigner
             sagsbehandler: sagsbehandler
             leder: leder
       cache:
@@ -550,7 +550,7 @@ display:
               anonymous: '0'
               administrator: '0'
               flow_designer: '0'
-              forloeb_designer: '0'
+              selvbetjeningsdesigner: '0'
               sagsbehandler: '0'
               medarbejder: '0'
               leder: '0'
@@ -615,7 +615,7 @@ display:
               anonymous: '0'
               administrator: '0'
               flow_designer: '0'
-              forloeb_designer: '0'
+              selvbetjeningsdesigner: '0'
               sagsbehandler: '0'
               medarbejder: '0'
               leder: '0'
