[#44232] Changed default page for flow_designer and selvbetjeningsdesigner (deleted forloebs_designer and created selvbetjeningsdesigner)

--- a/config/optional/user_default_page.user_default_page_config_entity.flow_designer_default_page.yml
+++ b/config/optional/user_default_page.user_default_page_config_entity.flow_designer_default_page.yml
@@ -10,7 +10,7 @@ user_roles:
   flow_designer: flow_designer
 users: null
 weight: 1
-login_redirect: /maestro/templates/list
+login_redirect: /admin/structure/webform
 login_redirect_message: 'Velkommen tilbage, her kan du arbejde med flow skabeloner.'
 logout_redirect: ''
 logout_redirect_message: ''
