Make basic workflow work, without copying of fields.

--- a/config/optional/maestro.maestro_template.multiple_parties_flow.yml
+++ b/config/optional/maestro.maestro_template.multiple_parties_flow.yml
@@ -1,8 +1,9 @@
+langcode: en
 status: true
 dependencies:
   enforced:
     module:
-    - os2forms_forloeb
+      - os2forms_forloeb
 id: multiple_parties_flow
 label: 'Flow med to parter'
 app_group: 0
