--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
     "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "^5.0@alpha",
     "drupal/workflow_participants": "^2.4",
-    "os2forms/os2forms_forloeb_profile": "^1.0",
+    "os2forms/os2forms_forloeb_profile": "dev-remove_rules",
     "webmozart/path-util": "2.3.0",
     "zaporylie/composer-drupal-optimizations": "1.2.0"
   },
