Webform node element module as dependency.

--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -41,6 +41,7 @@ dependencies:
   - webform_entity_print
   - webform_entity_print_attachment
   - webform_migrate
+  - webform_node_element
   - webform_permissions_by_term
   - webform_remote_handlers
   - webform_rest
