Added changes related to Drupal 9 compatibility

--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     "cweagans/composer-patches": "^1.6.5",
     "drupal/admin_toolbar": "^3.0",
     "drupal/chosen": "2.10.0",
-    "drupal/ckeditor_a11ychecker": "1.0.0",
+    "drupal/ckeditor_a11ychecker": "1.x-dev#a2099d09f362d8b005a53e8f2845858424cac3da",
     "drupal/clientside_validation": "3.0.0-rc4",
-    "drupal/coc_forms_auto_export": "1.0.0-alpha1",
+    "drupal/coc_forms_auto_export": "2.0.0-alpha1",
     "drupal/config_entity_revisions": "1.7.0",
-    "drupal/events_logging": "1.4.0",
+    "drupal/events_logging": "1.5.0",
     "drupal/embed": "1.4.0",
-    "drupal/header_and_footer_scripts": "2.2.0",
+    "drupal/header_and_footer_scripts": "3.0.0",
     "drupal/image_widget_crop": "2.3.0",
-    "drupal/ldap": "^3.0@beta",
+    "drupal/ldap": "^4.2",
     "drupal/ldap_auth": "^1.17",
     "drupal/libraries": "3.0.0-beta1",
     "drupal/linkit": "^5.0",
@@ -39,10 +39,10 @@
     "drupal/r4032login": "^2.1",
     "drupal/simple_ldap": "1.0.0-alpha3",
     "drupal/simplesamlphp_auth": "3.2.0",
-    "drupal/switch_page_theme": "1.0",
+    "drupal/switch_page_theme": "1.x-dev#ac38137f43cc72a8efba04bc127b87fbf2c28e06",
     "drupal/telephone_validation": "^2.2",
     "drupal/ultimate_cron": "2.0.0-alpha5",
-    "drupal/user_default_page": "2.0.0-rc1",
+    "drupal/user_default_page": "2.1",
     "drupal/webform_composite": "1.0-rc2",
     "drupal/webform_remote_handlers": "^1.6.0",
     "drupal/webform_rest": "^4.0.0-beta2",
