--- a/composer.json
+++ b/composer.json
@@ -18,40 +18,40 @@
   "require": {
     "cweagans/composer-patches": "^1.6.5",
     "drupal/admin_toolbar": "^3.0",
-    "drupal/chosen": "2.10.0",
+    "drupal/chosen": "^2.10",
     "drupal/ckeditor_a11ychecker": "2.0.0-alpha1",
     "drupal/clientside_validation": "3.0.0-rc4",
     "drupal/coc_forms_auto_export": "2.0.0-alpha1",
-    "drupal/config_entity_revisions": "1.7.0",
-    "drupal/events_logging": "1.5.0",
-    "drupal/embed": "1.4.0",
-    "drupal/header_and_footer_scripts": "3.0.0",
-    "drupal/image_widget_crop": "2.3.0",
+    "drupal/config_entity_revisions": "^1.7.0",
+    "drupal/events_logging": "^1.5",
+    "drupal/embed": "^1.4",
+    "drupal/header_and_footer_scripts": "^3.0",
+    "drupal/image_widget_crop": "^2.3",
     "drupal/ldap": "^4.2",
     "drupal/ldap_auth": "^1.17",
     "drupal/libraries": "3.0.0-beta1",
     "drupal/linkit": "^5.0",
-    "drupal/logging_alerts": "2.0.0",
+    "drupal/logging_alerts": "^2.0",
     "drupal/maestro": "3.0.1-rc2",
     "drupal/masquerade": "2.0.0-beta4",
-    "drupal/queue_mail": "1.4.0",
+    "drupal/queue_mail": "^1.4",
     "drupal/queue_ui": "^2.1",
     "drupal/r4032login": "^2.1",
     "drupal/simple_ldap": "1.0.0-alpha3",
-    "drupal/simplesamlphp_auth": "3.2.0",
+    "drupal/simplesamlphp_auth": "^3.2",
     "drupal/switch_page_theme": "1.x-dev#ac38137f43cc72a8efba04bc127b87fbf2c28e06",
     "drupal/telephone_validation": "^2.2",
     "drupal/ultimate_cron": "2.0.0-alpha5",
-    "drupal/user_default_page": "2.1",
+    "drupal/user_default_page": "^2.1",
     "drupal/webform_composite": "1.0-rc2",
-    "drupal/webform_node_element": "1.2",
+    "drupal/webform_node_element": "^1.2",
     "drupal/webform_remote_handlers": "^1.6.0",
     "drupal/webform_rest": "^4.0.0-beta2",
     "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "^5.0@alpha",
     "drupal/workflow_participants": "^2.4",
-    "webmozart/path-util": "2.3.0",
-    "zaporylie/composer-drupal-optimizations": "1.2.0"
+    "webmozart/path-util": "^2.3",
+    "zaporylie/composer-drupal-optimizations": "^1.2"
   },
   "extra": {
     "composer-exit-on-patch-failure": true,
