Add link to patch per review

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "Unlock possibility of using Entity print module export to Word": "https://www.drupal.org/files/issues/2020-02-29/3096552-6.patch"
       },
       "drupal/user_default_page": {
-        "Warning: in_array() expects parameter 2 to be array, null given in user_default_page_user_logout()": "https://www.drupal.org/files/issues/2021-11-01/user_default_page-3246986-2.patch"
+        "Warning: in_array() expects parameter 2 to be array, null given in user_default_page_user_logout() (https://www.drupal.org/node/3246986)": "https://www.drupal.org/files/issues/2021-11-01/user_default_page-3246986-2.patch"
       }
     }
   }
