Add hook_preprocess_page to read custom css

--- a/os2forms_forloeb.libraries.yml
+++ b/os2forms_forloeb.libraries.yml
@@ -1,5 +1,7 @@
-gin-custom-styles:
+os2forms_forloeb:
   version: 1.x
   css:
     theme:
       css/gin-custom.css: {}
+  dependencies:
+    - drupal/gin
