--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,9 @@
       },
       "drupal/user_default_page": {
         "Warning: in_array() expects parameter 2 to be array, null given in user_default_page_user_logout() (https://www.drupal.org/node/3246986)": "https://www.drupal.org/files/issues/2021-11-01/user_default_page-3246986-2.patch"
+      },
+      "drupal/coc_forms_auto_export": {
+        "3240592 - Problem with phpseclib requirement in 2.x (https://www.drupal.org/project/coc_forms_auto_export/issues/3240592)": "https://www.drupal.org/files/issues/2021-10-04/requirement-namespace-3240592-1.patch"
       }
     }
   }
