Add Diff module as dependency

--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -9,6 +9,7 @@ dependencies:
   - admin_toolbar_tools
   - coc_forms_auto_export
   - config_entity_revisions
+  - diff
   - entity_print
   - eu_cookie_compliance
   - events_logging
