--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "drupal/clientside_validation": "3.0.0-rc4",
     "drupal/coc_forms_auto_export": "2.0.0-alpha1",
     "drupal/config_entity_revisions": "^1.7.0",
+    "drupal/diff": "^1.0",
     "drupal/events_logging": "^1.5",
     "drupal/embed": "^1.4",
     "drupal/header_and_footer_scripts": "^3.0",
