--- a/os2forms_forloeb.routing.yml
+++ b/os2forms_forloeb.routing.yml
@@ -4,6 +4,6 @@ os2forms_forloeb.forloeb_task_console_controller_execute:
     _controller: '\Drupal\os2forms_forloeb\Controller\ForloebTaskConsoleController::execute'
     _title: 'Execute task'
   requirements:
-    _permission: 'view maestro task console'
+    _permission: 'access content'
   options:
     no_cache: TRUE
