OS2FORMS-380 Fixed coding standards issues

--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -6,51 +6,51 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 
 dependencies:
-  - admin_toolbar_tools
-  - coc_forms_auto_export
-  - config_entity_revisions
-  - diff
-  - entity_print
-  - eu_cookie_compliance
-  - events_logging
-  - gin_toolbar
-  - honeypot
-  - libraries
-  - maestro
-  - mailsystem
-  - masquerade
-  - os2forms
-  - os2forms_nemid
-  - os2forms_dawa
-  - os2forms_sbsys
-  - os2web_simplesaml
-  - pathauto
-  - r4032login
-  - redirect
-  - smtp
-  - system
-  - switch_page_theme
-  - token
-  - ultimate_cron
-  - user_default_page
-  - webform
-  - webform_ui
-  - webform_access
-  - webform_attachment
-  - webform_composite
-  - webform_embed
-  - webform_entity_print
-  - webform_entity_print_attachment
-  - webform_migrate
-  - webform_node_element
-  - webform_remote_handlers
-  - webform_rest
-  - webform_revisions
-  - webform_share
-  - webform_scheduled_email
-  - webform_submission_export_import
-  - webform_submission_log
-  - webform_templates
-  - workflow_participants
+  - 'drupal:admin_toolbar_tools'
+  - 'drupal:coc_forms_auto_export'
+  - 'drupal:config_entity_revisions'
+  - 'drupal:diff'
+  - 'drupal:entity_print'
+  - 'drupal:eu_cookie_compliance'
+  - 'drupal:events_logging'
+  - 'drupal:gin_toolbar'
+  - 'drupal:honeypot'
+  - 'drupal:libraries'
+  - 'drupal:maestro'
+  - 'drupal:mailsystem'
+  - 'drupal:masquerade'
+  - 'drupal:os2forms'
+  - 'drupal:os2forms_nemid'
+  - 'drupal:os2forms_dawa'
+  - 'drupal:os2forms_sbsys'
+  - 'drupal:os2web_simplesaml'
+  - 'drupal:pathauto'
+  - 'drupal:r4032login'
+  - 'drupal:redirect'
+  - 'drupal:smtp'
+  - 'drupal:system'
+  - 'drupal:switch_page_theme'
+  - 'drupal:token'
+  - 'drupal:ultimate_cron'
+  - 'drupal:user_default_page'
+  - 'drupal:webform'
+  - 'drupal:webform_ui'
+  - 'drupal:webform_access'
+  - 'drupal:webform_attachment'
+  - 'drupal:webform_composite'
+  - 'drupal:webform_embed'
+  - 'drupal:webform_entity_print'
+  - 'drupal:webform_entity_print_attachment'
+  - 'drupal:webform_migrate'
+  - 'drupal:webform_node_element'
+  - 'drupal:webform_remote_handlers'
+  - 'drupal:webform_rest'
+  - 'drupal:webform_revisions'
+  - 'drupal:webform_share'
+  - 'drupal:webform_scheduled_email'
+  - 'drupal:webform_submission_export_import'
+  - 'drupal:webform_submission_log'
+  - 'drupal:webform_templates'
+  - 'drupal:workflow_participants'
 'interface translation project': os2forms_forloeb
 'interface translation server pattern': modules/contrib/os2forms_forloeb/translations/os2forms_forloeb.da.po
