--- a/os2forms_forloeb.routing.yml
+++ b/os2forms_forloeb.routing.yml
@@ -7,3 +7,13 @@ os2forms_forloeb.forloeb_task_console_controller_execute:
     _permission: 'access content'
   options:
     no_cache: TRUE
+
+os2forms_forloeb.forloeb_task_console_controller_execute_retry:
+  path: 'os2forms-forloeb/execute-task-retry'
+  defaults:
+    _controller: '\Drupal\os2forms_forloeb\Controller\ForloebTaskConsoleController::retry'
+    _title: 'Task not yet ready'
+  requirements:
+    _permission: 'access content'
+  options:
+    no_cache: TRUE
