--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,12 @@
     ]
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "simplesamlphp/composer-module-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "cweagans/composer-patches": true,
+      "zaporylie/composer-drupal-optimizations": true
+    }
   }
 }
