Moved code check to pull request event

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -1,5 +1,5 @@
-name: Check Code standards
-on: [push]
+name: Check coding standards
+on: pull_request
 jobs:
   coding-standards:
     name: PHP - Check Coding Standards
